--- a/hr_addStaff.html
+++ b/hr_addStaff.html
@@ -259,13 +259,13 @@
                                 </li>
                                 <li class="dropdown">
                                     <a class="nav-link menu-title" href="javascript:void(0)"><i
-                                            data-feather="grid"></i><span>HR</span></a>
+                                        data-feather="grid"></i><span>HR</span></a>
                                     <ul class="nav-submenu menu-content">
                                         <li><a href="hr_dashboard.html">Dashboard</a></li>
                                         <li><a href="hr_staff.html">Staff</a></li>
-                                        <li><a href="hr_staffSalary.html">Salary Overview</a></li>
-                                        <li><a href="hr_leave.html">Staff Leave</a></li>
-                                        <li><a href="holidayList.html">Setting</a></li>
+                                        <li><a href="hr_leave.html">Staff Attendance</a></li>
+                                        <li><a href="hr_holiday_template.html">Holiday Template</a></li>
+                                        <li><a href="hr_settings.html">Settings</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -336,21 +336,12 @@
                                                     <li><a id="pills-created-tab" href="hr_staffProfile.html" role="tab"
                                                             aria-controls="pills-created" aria-selected="true"><span
                                                                 class="title">Profile</span></a></li>
-                                                    <li><a id="" href="hr_leave.html" role="tab"
-                                                            aria-controls="pills-created" aria-selected="false"><span
-                                                                class="title">Attendance</span></a></li>
                                                     <li><a class="show" id="pills-delayed-tab" href="hr_staffSalary.html" role="tab"
                                                             aria-controls="pills-delayed" aria-selected="false"><span
                                                                 class="title">Salary Overview</span></a></li>
                                                     <li><a class="show" id="pills-todaytask-tab" href="hr_salary_structure.html" role="tab"
                                                             aria-controls="pills-todaytask" aria-selected="false"><span
                                                                 class="title">Salary Structure</span></a></li>
-                                                    <li><a class="show" id="pills-delayed-tab" href="hr_holiday_template.html" role="tab"
-                                                            aria-controls="pills-delayed" aria-selected="false"><span
-                                                                class="title">Holiday Template</span></a></li>
-                                                    <li><a class="show" id="pills-delayed-tab" href="hr_settings.html" role="tab"
-                                                            aria-controls="pills-delayed" aria-selected="false"><span
-                                                                class="title">Settings</span></a></li>
                                                     <li>
                                                     <li>
                                                         <hr>
