--- a/hr_salary_revise.html
+++ b/hr_salary_revise.html
@@ -195,12 +195,13 @@
                                 </li>
                                 <li class="dropdown">
                                     <a class="nav-link menu-title" href="javascript:void(0)"><i
-                                            data-feather="grid"></i><span>HR</span></a>
+                                        data-feather="grid"></i><span>HR</span></a>
                                     <ul class="nav-submenu menu-content">
                                         <li><a href="hr_dashboard.html">Dashboard</a></li>
                                         <li><a href="hr_staff.html">Staff</a></li>
-                                        <li><a href="hr_staffSalary.html">Salary Overview</a></li>
-                                        <li><a href="hr_leave.html">Staff Leave</a></li>
+                                        <li><a href="hr_leave.html">Staff Attendance</a></li>
+                                        <li><a href="hr_holiday_template.html">Holiday Template</a></li>
+                                        <li><a href="hr_settings.html">Settings</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -224,21 +225,12 @@
                                                     <li><a id="pills-created-tab" href="hr_staffProfile.html" role="tab"
                                                             aria-controls="pills-created" aria-selected="true"><span
                                                                 class="title">Profile</span></a></li>
-                                                    <li><a id="" href="hr_leave.html" role="tab"
-                                                            aria-controls="pills-created" aria-selected="false"><span
-                                                                class="title">Attendance</span></a></li>
                                                     <li><a class="show" id="pills-delayed-tab" href="hr_staffSalary.html" role="tab"
                                                             aria-controls="pills-delayed" aria-selected="false"><span
                                                                 class="title">Salary Overview</span></a></li>
                                                     <li><a class="show" id="pills-todaytask-tab" href="hr_salary_structure.html" role="tab"
                                                             aria-controls="pills-todaytask" aria-selected="false"><span
                                                                 class="title">Salary Structure</span></a></li>
-                                                    <li><a class="show" id="pills-delayed-tab" href="hr_holiday_template.html" role="tab"
-                                                            aria-controls="pills-delayed" aria-selected="false"><span
-                                                                class="title">Holiday Template</span></a></li>
-                                                    <li><a class="show" id="pills-delayed-tab" href="hr_settings.html" role="tab"
-                                                            aria-controls="pills-delayed" aria-selected="false"><span
-                                                                class="title">Settings</span></a></li>
                                                     <li>
                                                     <li>
                                                         <hr>
@@ -284,7 +276,6 @@
                                                                         <label for="first_name">Staff Type</label>
                                                                         <input type="text" class="form-control"
                                                                             id="first_name" name="first_name"
-                                                                            placeholder="Enter First Name"
                                                                             value="Regular" disabled />
                                                                     </div>
                                                                 </div>
@@ -293,7 +284,7 @@
                                                                         <label for="first_name">Wage Rate</label>
                                                                         <input type="text" class="form-control"
                                                                             id="first_name" name="first_name"
-                                                                            placeholder="Enter First Name" value=""
+                                                                            value="Monthly"
                                                                             disabled />
                                                                     </div>
                                                                 </div>
@@ -304,8 +295,8 @@
                                                                             name="role">
                                                                             <option disabled selected>Regular Monthly
                                                                                 Staff </option>
-                                                                            <option value="Regular">Married</option>
-                                                                            <option value="Contract">Single</option>
+                                                                            <option value="Regular">Option-1</option>
+                                                                            <option value="Contract">Option-2</option>
                                                                         </select>
                                                                     </div>
                                                                 </div>
@@ -332,7 +323,7 @@
                                                                         <input type="text" class="form-control"
                                                                             id="first_name" name="first_name"
                                                                             placeholder="Enter First Name"
-                                                                            value="₹120000" disabled />
+                                                                            value="₹12" disabled />
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-2">
@@ -419,7 +410,7 @@
                                                                 <div class="col-2">
                                                                     <div class="form-group">
                                                                         <input type="text" class="form-control"
-                                                                            id="contact" name="contact" value="0.00"
+                                                                            id="contact" name="contact" value="₹ 1"
                                                                             placeholder="Enter Emergency Contact" />
                                                                     </div>
                                                                 </div>
