--- a/hr_holiday_template.html
+++ b/hr_holiday_template.html
@@ -268,13 +268,13 @@
                                 </li>
                                 <li class="dropdown">
                                     <a class="nav-link menu-title" href="javascript:void(0)"><i
-                                            data-feather="grid"></i><span>HR</span></a>
+                                        data-feather="grid"></i><span>HR</span></a>
                                     <ul class="nav-submenu menu-content">
                                         <li><a href="hr_dashboard.html">Dashboard</a></li>
                                         <li><a href="hr_staff.html">Staff</a></li>
-                                        <li><a href="hr_staffSalary.html">Salary Overview</a></li>
-                                        <li><a href="hr_leave.html">Staff Leave</a></li>
-                                        <li><a href="holidayList.html">Setting</a></li>
+                                        <li><a href="hr_leave.html">Staff Attendance</a></li>
+                                        <li><a href="hr_holiday_template.html">Holiday Template</a></li>
+                                        <li><a href="hr_settings.html">Settings</a></li>
                                     </ul>
                                 </li>
                             </ul>
