--- a/hr_settings.html
+++ b/hr_settings.html
@@ -222,7 +222,7 @@
                                         <div class="col-12">
                                             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                                                 aria-orientation="vertical">
-                                                <a class="nav-link" href="hr_leave_policy.html">
+                                                <a class="nav-link" href="hr_leave_template.html">
                                                     <div class="media">
                                                         <div class="media-body">
                                                             <h6> <span class="first_name_1">Leave Template </span></h6>
@@ -238,7 +238,7 @@
                                                         </div>
                                                     </div>
                                                 </a>
-                                                <a class="nav-link" href="hr_leave_policy.html">
+                                                <a class="nav-link" href="hr_late_entry_rule.html">
                                                     <div class="media">
                                                         <div class="media-body">
                                                             <h6> <span class="first_name_1">Late Entry Rule </span></h6>
@@ -246,7 +246,7 @@
                                                         </div>
                                                     </div>
                                                 </a>
-                                                <a class="nav-link" href="hr_holiday_template.html">
+                                                <a class="nav-link" href="hr_salary_access.html">
                                                     <div class="media">
                                                         <div class="media-body">
                                                             <h6> <span class="first_name_1">Salary Detail Access To Staff</span></h6>
@@ -254,7 +254,7 @@
                                                         </div>
                                                     </div>
                                                 </a>
-                                                <a class="nav-link" href="hr_holiday_template.html">
+                                                <a class="nav-link" href="hr_shift.html">
                                                     <div class="media">
                                                         <div class="media-body">
                                                             <h6> <span class="first_name_1">Shift Settings</span></h6>
