--- a/new.html
+++ b/new.html
@@ -1,22 +1,3 @@
-<div class="card-body p-0">
-    <div class="row list-persons" id="addcon">
-        <div class="col-xl-4 xl-50 col-md-5 box-col-6">
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical"><a
-                    class="contact-tab-0 nav-link active" id="v-pills-user-tab" data-bs-toggle="pill"
-                    onclick="activeDiv(0)" href="#v-pills-user" role="tab" aria-controls="v-pills-user"
-                    aria-selected="true">
-                    <div class="media"><img class="img-50 img-fluid m-r-20 rounded-circle update_img_0"
-                            src="../assets/images/user/2.png" alt="">
-                        <div class="media-body">
-                            <h6> <span class="first_name_0">Bucky </span><span class="last_name_0">Barnes</span></h6>
-                            <p class="email_add_0">barnes@gmail.com</p>
-                        </div>
-                    </div>
-                </a><a class="contact-tab-1 nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
-                    onclick="activeDiv(1)" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-                    aria-selected="false">
-                </a>
-            </div>
-        </div>
-    </div>
+<div class="input-group mb-3">
+    <input class="form-control"  value="3"  type="text"><span class="input-group-text">Weekly Off</span>
 </div>
