--- a/hr_shift_setting.html
+++ b/hr_shift_setting.html
@@ -45,9 +45,82 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/hr.css">
+    <style>
+        .attendance-container {
+            padding: 20px;
+        }
 
+        .row-flex {
+            display: flex;
+            align-items: stretch;
+        }
+
+        .things-to-do {
+            background-color: #f8f9fa;
+            padding: 20px;
+            text-align: center;
+            border-radius: 10px;
+            flex: 1;
+        }
+
+        .things-to-do .circle {
+            border: 2px solid #007bff;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 10px;
+        }
+
+        .attendance-card {
+            border-radius: 10px;
+            flex: 2;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .attendance-card-header,
+        .attendance-card-body,
+        .card-footer {
+            flex: none;
+        }
+
+        .attendance-card-body {
+            flex: 1;
+            text-align: center;
+        }
+
+        .attendance-table th,
+        .attendance-table td {
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .calendar {
+            display: none;
+        }
+
+        .expanded .calendar {
+            display: table-row-group;
+        }
+
+        .arrow {
+            cursor: pointer;
+        }
+
+        .custom-button {
+            background: none;
+            border: none;
+            color: #007bff;
+            padding: 0;
+            font: inherit;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
@@ -124,7 +197,7 @@
                 <div class="d-lg-none col mobile-toggle pull-right"><i data-feather="more-horizontal"></i></div>
             </div>
         </div>
-        <!-- Page Header Ends -->
+        <!-- Page Header Ends-->
         <!-- Page Body Start-->
         <div class="page-body-wrapper horizontal-menu">
             <!-- Page Sidebar Start-->
@@ -195,7 +268,7 @@
                                 </li>
                                 <li class="dropdown">
                                     <a class="nav-link menu-title" href="javascript:void(0)"><i
-                                            data-feather="grid"></i><span>HR</span></a>
+                                        data-feather="grid"></i><span>HR</span></a>
                                     <ul class="nav-submenu menu-content">
                                         <li><a href="hr_dashboard.html">Dashboard</a></li>
                                         <li><a href="hr_staff.html">Staff</a></li>
@@ -217,77 +290,42 @@
                         <div class="row">
                             <div class="col-6">
                                 <div>
-                                    <h4 class="f-w-600">Setting</h4>
+                                    <h4 class="f-w-600">Shift Setting</h4>
                                 </div>
                             </div>
                             <div class="col-6  d-flex justify-content-end align-items-right">
-                                <a href="hr_dashboard.html">
-                                    <button class="btn btn-pill btn-primary">Dashboard</button>
+                                <a href="hr_add_leave_template.html">
+                                    <button class="btn btn-pill btn-primary">Add Shift</button>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="email-right-aside bookmark-tabcontent contacts-tabs">
-                    <div class="card email-body radius-left">
-                        <div class="ps-0">
-                            <div class="tab-content">
-                                <div class="tab-pane fade active show" id="pills-personal" role="tabpanel"
-                                    aria-labelledby="pills-personal-tab">
-                                    <div class="row list-persons" id="addcon">
-                                        <div class="col-12">
-                                            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
-                                                aria-orientation="vertical">
-                                                <a class="nav-link" href="hr_leave_template.html">
-                                                    <div class="media">
-                                                        <div class="media-body">
-                                                            <h6> <span class="first_name_1">Leave Template </span></h6>
-                                                            <p class="email_add_1">View, Add and edit leave policy from here</p>
-                                                        </div>
-                                                    </div>
-                                                </a>
-                                                <!-- <a class="nav-link" href="hr_holiday_template.html">
-                                                    <div class="media">
-                                                        <div class="media-body">
-                                                            <h6> <span class="first_name_1">Holiday Template</span></h6>
-                                                            <p class="email_add_1">create and assign holiday template</p>
-                                                        </div>
-                                                    </div>
-                                                </a> -->
-                                                <a class="nav-link" href="hr_late_entry_rule.html">
-                                                    <div class="media">
-                                                        <div class="media-body">
-                                                            <h6> <span class="first_name_1">Late Entry Rule </span></h6>
-                                                            <p class="email_add_1">Set late entry rule</p>
-                                                        </div>
-                                                    </div>
-                                                </a>
-                                                <a class="nav-link" href="hr_salary_access.html">
-                                                    <div class="media">
-                                                        <div class="media-body">
-                                                            <h6> <span class="first_name_1">Salary Detail Access To Staff</span></h6>
-                                                            <p class="email_add_1">Manage who can see Salary details</p>
-                                                        </div>
-                                                    </div>
-                                                </a>
-                                                <a class="nav-link" href="hr_shift_setting.html">
-                                                    <div class="media">
-                                                        <div class="media-body">
-                                                            <h6> <span class="first_name_1">Shift Settings</span></h6>
-                                                            <p class="email_add_1">Modify shift settings from here</p>
-                                                        </div>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
+                <div class="container-fluid">
+                    <span class="text-secondary">Fixed shift</span>
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row align-items-center d-flex">
+                                <h4 class="col-2 fs-6 font-weight-bold text-dark">General shift (9:00 AM to 7:00 PM)</h4>
+                                <div class="col-2 fs-6"></div>
+                                <div class="col-2"><span class="bg-light btn-pill text-dark px-2 py-1">9:00 AM to 7:00 PM</span></div>
+                                <div class="col-2"><span class="bg-light btn-pill text-dark px-2 py-1">Applied to 12 Staff(s)</span></div>
+                                <div class="col-2 fs-6">
+                                    
+                                </div>
+                                <div class="col-2 fs-6">
+                                    <a href="hr_shift_edit.html">
+                                        <i data-feather="more-vertical"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
+
             <!-- Container-fluid Ends-->
             <!-- footer start-->
             <footer class="footer">
@@ -304,91 +342,52 @@
                     </div>
                 </div>
             </footer>
-            <!-- tap on top starts-->
-            <div class="tap-top"><i class="icon-control-eject"></i></div>
-            <!-- tap on tap ends-->
         </div>
-        <!-- latest jquery-->
-        <script src="../assets/js/jquery-3.5.1.min.js"></script>
-        <!-- feather icon js-->
-        <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
-        <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
-        <!-- Sidebar jquery-->
-        <!-- <script src="../assets/js/sidebar-menu.js"></script> -->
-        <script src="../assets/js/config.js">   </script>
-        <!-- Bootstrap js-->
-        <script src="../assets/js/bootstrap/popper.min.js"></script>
-        <script src="../assets/js/bootstrap/bootstrap.min.js"></script>
-        <!-- Plugins JS start-->
-        <script src="../assets/js/chart/chartjs/chart.min.js"></script>
-        <script src="../assets/js/chart/chartist/chartist.js"></script>
-        <script src="../assets/js/chart/chartist/chartist-plugin-tooltip.js"></script>
-        <script src="../assets/js/chart/morris-chart/raphael.js"></script>
-        <script src="../assets/js/chart/morris-chart/morris.js"> </script>
-        <script src="../assets/js/chart/morris-chart/prettify.min.js"></script>
-        <script src="../assets/js/chart/knob/knob.min.js"></script>
-        <script src="../assets/js/chart/apex-chart/apex-chart.js"></script>
-        <script src="../assets/js/chart/apex-chart/stock-prices.js"></script>
-        <script src="../assets/js/prism/prism.min.js"></script>
-        <script src="../assets/js/clipboard/clipboard.min.js"></script>
-        <script src="../assets/js/counter/jquery.waypoints.min.js"></script>
-        <script src="../assets/js/counter/jquery.counterup.min.js"></script>
-        <script src="../assets/js/counter/counter-custom.js"></script>
-        <script src="../assets/js/custom-card/custom-card.js"></script>
-        <script src="../assets/js/dashboard/default.js"></script>
-        <script src="../assets/js/greeting.js"></script>
-        <script src="../assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
-        <script src="../assets/js/datatable/datatables/datatable.custom.js"></script>
-        <!-- Plugins JS Ends-->
-        <!-- Theme js-->
-        <script src="../assets/js/theme-customizer/customizer.js"></script>
-        <script src="../assets/js/script.js"></script>
-        <script>
-            function myFunction() {
-                window.location.href = "hr_addStaff.html"
-            }
-
-            function nextTab() {
-                const activeTab = document.querySelector('.nav-tabs .nav-link.active');
-                const nextTab = activeTab.parentElement.nextElementSibling;
-
-                if (nextTab) {
-                    const nextLink = nextTab.querySelector('.nav-link');
-                    const nextPane = document.querySelector(nextLink.getAttribute('href'));
-
-                    activeTab.classList.remove('active');
-                    nextLink.classList.add('active');
-
-                    document.querySelector('.tab-pane.active').classList.remove('show', 'active');
-                    nextPane.classList.add('show', 'active');
-                }
-            }
-            function showInfo(sectionId, step) {
-                // Hide all info sections
-                document.querySelectorAll('.info-section').forEach(section => {
-                    section.classList.remove('active');
-                });
-                // Show the selected info section
-                document.getElementById(sectionId).classList.add('active');
-
-                // Update the step classes
-                document.querySelectorAll('.u-pearl').forEach(pearl => {
-                    const pearlStep = parseInt(pearl.getAttribute('data-step'));
-                    if (pearlStep < step) {
-                        pearl.classList.add('done');
-                        pearl.classList.remove('current');
-                    } else if (pearlStep === step) {
-                        pearl.classList.add('current');
-                        pearl.classList.remove('done');
-                    } else {
-                        pearl.classList.remove('done', 'current');
-                    }
-                });
-            }
-
-        </script>
-        <!-- login js-->
-        <!-- Plugin used-->
+        <!-- tap on top starts-->
+        <div class="tap-top"><i class="icon-control-eject"></i></div>
+        <!-- tap on tap ends-->
+    </div>
+    </div>
+    <!-- latest jquery-->
+    <script src="../assets/js/jquery-3.5.1.min.js"></script>
+    <!-- feather icon js-->
+    <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
+    <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
+    <!-- Sidebar jquery-->
+    <!-- <script src="../assets/js/sidebar-menu.js"></script> -->
+    <script src="../assets/js/config.js">   </script>
+    <!-- Bootstrap js-->
+    <script src="../assets/js/bootstrap/popper.min.js"></script>
+    <script src="../assets/js/bootstrap/bootstrap.min.js"></script>
+    <!-- Plugins JS start-->
+    <script src="../assets/js/chart/chartjs/chart.min.js"></script>
+    <script src="../assets/js/chart/chartist/chartist.js"></script>
+    <script src="../assets/js/chart/chartist/chartist-plugin-tooltip.js"></script>
+    <script src="../assets/js/chart/morris-chart/raphael.js"></script>
+    <script src="../assets/js/chart/morris-chart/morris.js"> </script>
+    <script src="../assets/js/chart/morris-chart/prettify.min.js"></script>
+    <script src="../assets/js/chart/knob/knob.min.js"></script>
+    <script src="../assets/js/chart/apex-chart/apex-chart.js"></script>
+    <script src="../assets/js/chart/apex-chart/stock-prices.js"></script>
+    <script src="../assets/js/prism/prism.min.js"></script>
+    <script src="../assets/js/clipboard/clipboard.min.js"></script>
+    <script src="../assets/js/counter/jquery.waypoints.min.js"></script>
+    <script src="../assets/js/counter/jquery.counterup.min.js"></script>
+    <script src="../assets/js/counter/counter-custom.js"></script>
+    <script src="../assets/js/custom-card/custom-card.js"></script>
+    <script src="../assets/js/dashboard/default.js"></script>
+    <script src="../assets/js/greeting.js"></script>
+    <script src="../assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
+    <script src="../assets/js/datatable/datatables/datatable.custom.js"></script>
+    <!-- Plugins JS Ends-->
+    <!-- Theme js-->
+    <script src="../assets/js/theme-customizer/customizer.js"></script>
+    <script src="../assets/js/script.js"></script>
+    <script>
+        
+    </script>
+    <!-- login js-->
+    <!-- Plugin used-->
 </body>
 
 </html>
