--- a/new.html
+++ b/new.html
@@ -1,3 +1,37 @@
-<div class="input-group mb-3">
-    <input class="form-control"  value="3"  type="text"><span class="input-group-text">Weekly Off</span>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Show/Hide Section with Arrow</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .arrow-icon {
+      cursor: pointer;
+      font-size: 1.5em;
+    }
+    .rotate {
+      transform: rotate(180deg);
+    }
+  </style>
+</head>
+<body>
+  <div class="container mt-5">
+    <div class="d-flex align-items-center mb-2">
+      <span class="arrow-icon" id="toggleDetails1">&#9660;</span>
+      <label class="ml-2">Assigned Staff</label>
+    </div>
+    <div id="details1" class="d-none">Section to be displayed</div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('#toggleDetails1').on('click', function() {
+        $('#details1').toggleClass('d-none');
+        $(this).toggleClass('rotate');
+      });
+    });
+  </script>
+</body>
+</html>
